<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="T_JXCE1_Position" Id="{0a100147-cdb8-0f6c-1263-42042015ade6}">
    <Declaration><![CDATA[TYPE T_JXCE1_Position : REAL; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>