<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="T_JXCE1_Speed" Id="{548746a9-05a9-02f7-2665-23b1c131ae4d}">
    <Declaration><![CDATA[TYPE T_JXCE1_Speed : REAL; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>